# face-recognition

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  OPENCV_DIFF.md  README.md  config.txt
cmake/: FaceRecogConfig.cmake.in  FaceRecogUtils.cmake  FindFlyCapture2.cmake  Findmvector.cmake
inc/: FaceRecog.h  FaceRecogConfig.h
inc/Camera/: CameraDefines.h  CameraType.h  FlyCapture2Define.h  FlyCapture2Utilities.h
inc/Classifiers/: ClassifierEnsembleESVM.h  ClassifierEnsembleTM.h  ClassifierFaceNet.h  ClassifierType.h  IClassifier.h  TemplateMatcher.h
inc/Configs/: ConfigFile.h  ConsoleOptions.h  ForwardDeclares.h  Platform.h  Version.h
inc/Detectors/: DetectorType.h  EyeDetector.h  FaceDetectorFRCNN.h  FaceDetectorSSD.h  FaceDetectorVJ.h  FaceDetectorYOLO.h  IDetector.h
inc/FaceDetectors/: EyeDetector.h  FaceDetectorFRCNN.h  FaceDetectorSSD.h  FaceDetectorVJ.h  FaceDetectorYOLO.h  FaceDetectorYoloCNN.h  IFaceDetector.h
inc/Python/: PyCvBoostConverter.h  PythonInterop.h
inc/Trackers/: ITracker.h  TrackerCamshift.h  TrackerCompressive.h  TrackerFastDT.h  TrackerKCF.h  TrackerSTRUCK.h
inc/Tracks/: Association.h  CircularBuffer.h  HaarFeature.h  HaarFeatures.h  Hungarian.h  ImageRep.h  Kernels.h  LaRank.h  Rect.h  Sample.h  Sampler.h  Track.h  TrackROI.h
inc/Utilities/: Common.h  Macros.h  MatDefines.h  MultiColorType.h  Utilities.h
py/: correctFrameSequence.py  evalSequenceFile.py  evalSequencesChokePoint.py  extractGroundTruthChokePoint.py  extractSequencesChokePoint.py  extract_probes.py  extract_probes_camera_and_session.py  generateSequencesChokePoint.py  printUtils.py  processSequences.py  results_batch_process_camera.py  results_checker.py  results_extract_probes.py  results_merger.py  results_process_summary.py
sh/: associateFastDtPicsWithPersonId.sh  copyForGoogleDrive.sh  copyPics.sh  createMKVFiles.sh  createOutputMKVFiles.sh  deleteAllFrames.sh  deletePics.sh  evaluateData.sh  extractPicsFromFastDt.sh  formatOutputBbox.sh  moveFiles.sh  preparePicsForFaceNetEval.sh  renameBackupPics.sh  runAllTests.1.sh  runAllTests.2.sh  runAllTests.sh
src/: main.cpp
src/Camera/: CameraType.cpp  FlyCapture2Utilities.cpp
src/Classifiers/: ClassifierEnsembleESVM.cpp  ClassifierEnsembleTM.cpp  ClassifierFaceNet.cpp  ClassifierType.cpp  IClassifier.cpp  TemplateMatcher.cpp
src/Configs/: ConfigFile.cpp
src/Detectors/: DetectorType.cpp  EyeDetector.cpp  FaceDetectorFRCNN.cpp  FaceDetectorSSD.cpp  FaceDetectorVJ.cpp  FaceDetectorYOLO.cpp  IDetector.cpp
src/FaceDetectors/: EyeDetector.cpp  FaceDetectorFRCNN.cpp  FaceDetectorSSD.cpp  FaceDetectorVJ.cpp  FaceDetectorYOLO.cpp  FaceDetectorYoloCNN.cpp  IFaceDetector.cpp
src/Python/: PyCvBoostConverter.cpp  PythonInterop.cpp  PythonModule.cpp
src/Trackers/: TrackerCamshift.cpp  TrackerCompressive.cpp  TrackerFastDT.cpp  TrackerKCF.cpp  TrackerSTRUCK.cpp
src/Tracks/: Association.cpp  CircularBuffer.cpp  HaarFeature.cpp  HaarFeatures.cpp  Hungarian.cpp  ImageRep.cpp  LaRank.cpp  Sampler.cpp  Track.cpp  TrackROI.cpp
src/Utilities/: MultiColorType.cpp  Utilities.cpp
